--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <main class="fundo-preto_m_branca">
     <div class="introducao padd">
       <div class="introducao-texto">
-        <h1>Bicicletas feitas
-          sob medida<span class="ponto-amarelo">.</span></h1>
-        <p class="txt-1">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h2 class="font-ppns-1">Bicicletas feitas
+          sob medida<span class="ponto-amarelo">.</span></h2>
+        <p class="rbot-txt-3">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="">SELECIONE A SUA</a>
 
       </div>
@@ -50,15 +50,15 @@
 
 
   <section class="escolha-bikes">
-    <h1 class="padd">escolha a sua<span class="ponto-amarelo">.</span></h1>
+    <h2 class="font-ppns-1 padd">escolha a sua<span class="ponto-amarelo">.</span></h2>
     <ul class="bikes">
 
       <li>
         <a class="container-bikes" href="">
           <img src="./img/bicicletas/magic-home.jpg" alt="">
           <div class="bikes-info">
-            <h3>Magic Might</h3>
-            <p class="txt-0">R$ 2499</p>
+            <h3 class="font-ppns-2">Magic Might</h3>
+            <p class="rbot-txt-4">R$ 2499</p>
           </div>
         </a>
       </li>
@@ -66,8 +66,8 @@
         <a class="container-bikes" href="">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="">
           <div class="bikes-info">
-            <h3>Magic Might</h3>
-            <p class="txt-0">R$ 2499</p>
+            <h3 class="font-ppns-2">Magic Might</h3>
+            <p class="rbot-txt-4">R$ 2499</p>
           </div>
         </a>
       </li>
@@ -75,8 +75,8 @@
         <a class="container-bikes" href="">
           <img src="./img/bicicletas/nebula-home.jpg" alt="">
           <div class="bikes-info">
-            <h3>Magic Might</h3>
-            <p class="txt-0">R$ 2499</p>
+            <h3 class="font-ppns-2">Magic Might</h3>
+            <p class="rbot-txt-4">R$ 2499</p>
           </div>
         </a>
       </li>
@@ -86,20 +86,20 @@
   <section class="tecnologia-bg">
     <div class="tecnologias padd">
       <div class="container-tecnologias">
-        <p class="h1-roboto">Tecnologia Avançada</p>
-        <h1>você escolhe as suas cores e componentes<span class="ponto-amarelo">.</span></h1>
-        <p class="txt-1">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <p class="rbot-txt-2 ">Tecnologia Avançada</p>
+        <h2 class="font-ppns-1">você escolhe as suas cores e componentes<span class="ponto-amarelo">.</span></h2>
+        <p class="rbot-txt-3">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
         <a class="destaque-poppins" href=""> ESCOLHA UM MODELO</a>
 
         <div>
           <ul class="container-vantagens">
             <li>
-              <h4 class="motor-eletrico">Motor Elétrico</h4>
-              <p class="txt-2">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+              <h3 class="motor-eletrico font-ppns-3">Motor Elétrico</h3>
+              <p class="rbot-txt-5 ">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
             </li>
             <li>
-              <h4 class="rastreador">Rastreador</h4>
-              <p class="txt-2">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+              <h3 class="rastreador font-ppns-3">Rastreador</h3>
+              <p class="rbot-txt-5 ">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
             </li>
           </ul>
         </div>
@@ -109,7 +109,7 @@
   </section>
 
   <section class="parceiros ">
-    <h1 class="padd">nossos parceiros<span class="ponto-amarelo">.</span></h1>
+    <h2 class="font-ppns-1 padd">nossos parceiros<span class="ponto-amarelo">.</span></h2>
     <ul>
       <li>
         <img src="./img/parceiros/caravan.svg" alt="">
@@ -143,20 +143,20 @@
     <div><img src="./img/fotos/depoimento.jpg" alt=""></div>
     <div class="container-depoimento">
       <blockquote>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</blockquote>
-      <h2>Ana Julia</h2>
+      <span class="font-ppns-5">Ana Julia</span>
     </div>
   </section>
 
   <section class="seguros">
     <div class="container-seguros padd">
 
-      <h1>seguros<span class="ponto-amarelo">.</span></h1>
+      <h2 class="font-ppns-1">seguros<span class="ponto-amarelo">.</span></h2>
 
       <div class="prata">
 
-        <h5>PRATA</h5>
-        <h5 class="preco">R$ 199</h5>
-        <ul class="txt-0">
+        <h3 class="font-ppns-2">PRATA</h3>
+        <h3 class="preco font-ppns-2">R$ 199</h3>
+        <ul class="rbot-txt-4">
           <li>
             <p>Duas trocas por ano</p>
           </li>
@@ -174,9 +174,9 @@
       </div>
 
       <div class="ouro">
-        <h5>OURO</h5>
-        <h5 class="preco">R$ 299</h5>
-        <ul class="txt-0">
+        <h3 class="font-ppns-2">OURO</h3>
+        <h3 class="preco font-ppns-2">R$ 299</h3>
+        <ul class="rbot-txt-4">
           <li>
             <p>Cinco trocas por ano</p>
           </li>
@@ -203,30 +203,32 @@
   <footer class="rodape">
     <div class="container-rodape padd">
       <img src="./img/bikcraft.svg" alt="">
-      <ul class="txt-4">
-        <li class="h1-roboto">
+      <ul class="contato rbot-txt-4">
+        <li class="rbot-txt-2 ">
           <p> Contato</p>
         </li>
-        <li>
+        <li class="itens-contato">
           <p>+55 21 9999-9999</p>
           <p>contato@bikcraft.com</p>
         </li>
-        <li>
+        <li class="itens-contato">
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p> Rio de Janeiro - RJ</p>
         </li>
-        <li></li>
-      </ul>
-      <ul class="links ppns-2">
-        <li>
-          <p class="h1-roboto">Informações</p>
+        <li><img src="./img/redes/facebook.svg" alt=""><img src="./img/redes/instagram.svg" alt="">
+          <img src="./img/redes/youtube.svg" alt="">
         </li>
-        <li><a href=""> Bicicletas</a></li>
-        <li><a href="">Seguros</a></li>
-        <li><a href="">Contato</a></li>
-        <li><a href="">Termos e Condições</a></li>
       </ul>
-      <p class="direitos txt-4">Bikcraft © Alguns direitos reservados.</p>
+      <ul class="links font-ppns-4 ">
+        <li>
+          <p class="rbot-txt-2 ">Informações</p>
+        </li>
+        <li class="lista-link"><a href=""> Bicicletas</a></li>
+        <li class="lista-link"><a href="">Seguros</a></li>
+        <li class="lista-link"><a href="">Contato</a></li>
+        <li class="lista-link"><a href="">Termos e Condições</a></li>
+      </ul>
+      <p class="direitos rbot-txt-4">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
 
