responsividade pagina principal adicionada

--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
         <div>
           <ul class="container-vantagens">
             <li>
+              <div class="vantagens-icones"><img src="./img/icones/eletrica.svg" alt=""></div>
               <h3 class="motor-eletrico font-ppns-3">Motor Elétrico</h3>
               <p class="rbot-txt-5 ">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
             </li>
             <li>
+              <div class="vantagens-icones"><img src="./img/icones/rastreador.svg" alt=""></div>
               <h3 class="rastreador font-ppns-3">Rastreador</h3>
               <p class="rbot-txt-5 ">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
             </li>
@@ -202,7 +204,9 @@
 
   <footer class="rodape">
     <div class="container-rodape padd">
-      <img src="./img/bikcraft.svg" alt="">
+      <div class="logo-rodape">
+        <img src="./img/bikcraft.svg" alt="">
+      </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
           <p> Contato</p>
