pagina geral bicicletas

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
       <nav aria-label="menu-header">
         <ul class="menu">
-          <li><a href="">Bicicletas</a></li>
-          <li><a href="">Seguros</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-    <div class="introducao background-site">
+  <main class="introducao black-bg">
+    <div class="introducao-container background-site">
       <div class="introducao-texto">
         <h2 class="font-ppns-1">Bicicletas feitas
-          sob medida<span class="ponto-amarelo">.</span></h2>
+          sob medida<span class="ponto">.</span></h2>
         <p class="rbot-txt-3">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="">SELECIONE A SUA</a>
 
@@ -44,7 +44,7 @@
 
 
   <article class="escolha-bikes">
-    <h2 class="font-ppns-1 background-site">escolha a sua<span class="ponto-amarelo">.</span></h2>
+    <h2 class="font-ppns-1 background-site">escolha a sua<span class="ponto">.</span></h2>
     <ul class="bikes">
 
       <li>
@@ -77,11 +77,11 @@
     </ul>
   </article>
 
-  <article class="tecnologia-bg">
+  <article class="tecnologia black-bg">
     <div class="tecnologias background-site">
       <div class="container-tecnologias">
         <p class="rbot-txt-2 ">Tecnologia Avançada</p>
-        <h2 class="font-ppns-1">você escolhe as suas cores e componentes<span class="ponto-amarelo">.</span></h2>
+        <h2 class="font-ppns-1">você escolhe as suas cores e componentes<span class="ponto">.</span></h2>
         <p class="rbot-txt-3">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
         <a class="destaque-poppins" href=""> ESCOLHA UM MODELO</a>
 
@@ -105,7 +105,7 @@
   </article>
 
   <section class="parceiros" aria-label="parceiros bikcraft">
-    <h2 class="font-ppns-1 background-site">nossos parceiros<span class="ponto-amarelo">.</span></h2>
+    <h2 class="font-ppns-1 background-site">nossos parceiros<span class="ponto">.</span></h2>
     <ul>
       <li>
         <img src="./img/parceiros/caravan.svg" alt="">
@@ -143,10 +143,10 @@
     </div>
   </section>
 
-  <article class="seguros">
+  <article class="seguros black-bg">
     <div class="container-seguros background-site">
 
-      <h2 class="font-ppns-1">seguros<span class="ponto-amarelo">.</span></h2>
+      <h2 class="font-ppns-1">seguros<span class="ponto">.</span></h2>
 
       <div class="prata">
 
@@ -154,16 +154,16 @@
         <h3 class="preco font-ppns-2">R$ 199</h3>
         <ul class="rbot-txt-4">
           <li>
-            <p>Duas trocas por ano</p>
+            Duas trocas por ano
           </li>
           <li>
-            <p>Assistência técnica</p>
+            Assistência técnica
           </li>
           <li>
-            <p>Suporte 08h às 18h</p>
+            Suporte 08h às 18h
           </li>
           <li>
-            <p>Cobertura estadual</p>
+            Cobertura estadual
           </li>
         </ul>
         <a class="botao" href="">INSCREVA-SE</a>
@@ -174,21 +174,21 @@
         <h3 class="preco font-ppns-2">R$ 299</h3>
         <ul class="rbot-txt-4">
           <li>
-            <p>Cinco trocas por ano</p>
+            Cinco trocas por ano
           </li>
           <li>
-            <p>Assistência especial</p>
+            Assistência especial
           <li>
-            <p>Suporte 24h</p>
+            Suporte 24h
           </li>
           <li>
-            <p>Cobertura nacional
+            Cobertura nacional
           </li>
           <li>
-            <p>Desconto em parceiros</p>
+            Desconto em parceiros
           </li>
           <li>
-            <p>Acesso ao Clube Bikcraft</p>
+            Acesso ao Clube Bikcraft
           </li>
         </ul>
         <a class="botao" href="">INSCREVA-SE</a>
@@ -203,7 +203,7 @@
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
-          <p> Contato</p>
+          Contato
         </li>
         <li class="itens-contato">
           <p>+55 21 9999-9999</p>
@@ -213,18 +213,27 @@
           <p>Rua Ali Perto, 42 - Botafogo</p>
           <p> Rio de Janeiro - RJ</p>
         </li>
-        <li><img src="./img/redes/facebook.svg" alt=""><img src="./img/redes/instagram.svg" alt="">
-          <img src="./img/redes/youtube.svg" alt="">
+        <li>
+          <a href=""><img src="./img/redes/facebook.svg" alt=""></a>
+          <a href=""><img src="./img/redes/instagram.svg" alt=""></a>
+          <a href=""><img src="./img/redes/youtube.svg" alt=""></a>
         </li>
       </ul>
       <ul class="links font-ppns-4 ">
         <li>
           <p class="rbot-txt-2 ">Informações</p>
         </li>
-        <li class="lista-link"><a href=""> Bicicletas</a></li>
-        <li class="lista-link"><a href="">Seguros</a></li>
-        <li class="lista-link"><a href="">Contato</a></li>
-        <li class="lista-link"><a href="">Termos e Condições</a></li>
+        <li class="lista-link">
+          <a href="./bicicletas.html"> Bicicletas</a>
+        </li>
+        <li class="lista-link"><a href="./seguros.html">Seguros</a>
+        </li>
+        <li class="lista-link">
+          <a href="./contatos.html">Contato</a>
+        </li>
+        <li class="lista-link">
+          <a href="./termos.html">Termos e Condições</a>
+        </li>
       </ul>
       <p class="direitos rbot-txt-4">Bikcraft © Alguns direitos reservados.</p>
     </div>
