adicionado paginas das bicicletas

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   <main class="introducao black-bg">
     <div class="introducao-container background-site">
       <div class="introducao-texto">
-        <h2 class="font-ppns-1">Bicicletas feitas
-          sob medida<span class="ponto">.</span></h2>
+        <h1 class="font-ppns-1">Bicicletas feitas
+          sob medida<span class="ponto">.</span></h1>
         <p class="rbot-txt-3">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="">SELECIONE A SUA</a>
+        <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
 
       </div>
       <div>
@@ -48,8 +48,8 @@
     <ul class="bikes">
 
       <li>
-        <a class="container-bikes" href="">
-          <img src="./img/bicicletas/magic-home.jpg" alt="foto bicicleta">
+        <a class="container-bikes" href="./magic.html">
+          <img src="./img/bicicletas/magic-home.jpg" alt="foto bicicleta magic">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Magic Might</h3>
             <p class="rbot-txt-4">R$ 2499</p>
@@ -57,8 +57,8 @@
         </a>
       </li>
       <li>
-        <a class="container-bikes" href="">
-          <img src="./img/bicicletas/nimbus-home.jpg" alt="foto bicicleta">
+        <a class="container-bikes" href="./nimbus.html">
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="foto bicicleta nimbus">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nimbus Stark</h3>
             <p class="rbot-txt-4">R$ 4999</p>
@@ -66,8 +66,8 @@
         </a>
       </li>
       <li>
-        <a class="container-bikes" href="">
-          <img src="./img/bicicletas/nebula-home.jpg" alt="foto bicicleta">
+        <a class="container-bikes" href="./nebula.html">
+          <img src="./img/bicicletas/nebula-home.jpg" alt="foto bicicleta nebula">
           <div class="bikes-info">
             <h3 class="font-ppns-2">Nebula Cosmic</h3>
             <p class="rbot-txt-4">R$ 3499</p>
@@ -83,7 +83,7 @@
         <p class="rbot-txt-2 ">Tecnologia Avançada</p>
         <h2 class="font-ppns-1">você escolhe as suas cores e componentes<span class="ponto">.</span></h2>
         <p class="rbot-txt-3">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="destaque-poppins" href=""> ESCOLHA UM MODELO</a>
+        <a class="destaque-poppins" href="./bicicletas.html"> ESCOLHA UM MODELO</a>
 
         <div>
           <ul class="container-vantagens">
@@ -199,15 +199,15 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <img src="./img/bikcraft.svg" alt="">
+        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
           Contato
         </li>
         <li class="itens-contato">
-          <p>+55 21 9999-9999</p>
-          <p>contato@bikcraft.com</p>
+          <a href="./">+55 21 9999-9999</a>
+          <a href="./">contato@bikcraft.com</a>
         </li>
         <li class="itens-contato">
           <p>Rua Ali Perto, 42 - Botafogo</p>
