--- a/bicicletas.html
+++ b/bicicletas.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Bicicletas Bikcraft</title>
+  <title>Bikcraft | Bicicletas</title>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
               <p class="font-ppns-8">Rastreador</p>
             </li>
           </ul>
-          <a class="botao" href="">
+          <a class="botao" href="./nimbus.html">
             <p> mais sobre</p>
             <img src="./img/icones/seta.svg" alt="">
           </a>
@@ -100,7 +100,7 @@
                 <p class="font-ppns-8">Rastreador</p>
               </li>
             </ul>
-            <a class="botao" href="">
+            <a class="botao" href="magic.html">
               <p> mais sobre</p>
               <img src="./img/icones/seta.svg" alt="">
             </a>
@@ -136,7 +136,7 @@
               <p class="font-ppns-8">Rastreador</p>
             </li>
           </ul>
-          <a class="botao" href="">
+          <a class="botao" href="nebula.html">
             <p> mais sobre</p>
             <img src="./img/icones/seta.svg" alt="">
           </a>
@@ -152,15 +152,15 @@
   <footer class="rodape">
     <div class="container-rodape background-site">
       <div class="logo-rodape">
-        <img src="./img/bikcraft.svg" alt="">
+        <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
       </div>
       <ul class="contato rbot-txt-4">
         <li class="rbot-txt-2 ">
           Contato
         </li>
         <li class="itens-contato">
-          <p>+55 21 9999-9999</p>
-          <p>contato@bikcraft.com</p>
+          <a href="./">+55 21 9999-9999</a>
+          <a href="./">contato@bikcraft.com</a>
         </li>
         <li class="itens-contato">
           <p>Rua Ali Perto, 42 - Botafogo</p>
