adicionado paginas das  bicicletas v2

--- a/magic.html
+++ b/magic.html
@@ -13,7 +13,7 @@
   <title>Bikcraft | Magic Might</title>
 </head>
 
-<body>
+<body id="nimbus">
   <header>
     <div class="cabecalho background-site">
       <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
@@ -30,11 +30,120 @@
   <main>
     <div class="black-bg">
       <div class="titulo-main background-site">
-        <p class="rbot-txt-2">R$ 2999</p>
+        <p class="rbot-txt-2">R$ 2499</p>
         <h1 class="font-ppns-1 c1">Magic Might<span class="ponto">.</span></h1>
       </div>
     </div>
+
+    <div class="black-bg">
+      <div class="bicicleta background-site">
+
+        <div class=" bicicleta-fotos">
+          <img src="./img/bicicletas/magic.jpg" alt="bicicleta magic">
+          <img src="./img/bicicletas/nebula.jpg" alt="bicicleta nebula">
+          <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta nimbus">
+        </div>
+
+        <div class="bicicleta-container c1">
+          <div class="bicicleta-introducao">
+            <p class="rbot-txt-3 c9">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+            <a class="botao" href="">
+              <p> comprar agora</p>
+            </a>
+
+            <div class="side-box c8 font-ppns-9 ">
+              <div class="side-info">
+                <img src="./img/icones/entrega.svg" alt="">
+                <span>entrega em 5 dias</span>
+              </div>
+              <div class="side-info">
+                <img src="./img/icones/estoque.svg" alt="">
+                <span>18 em estoque</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="bicicleta-info ">
+            <h2 class="font-ppns-9">Informações</h2>
+            <ul class="rbot-txt-5 c9">
+              <li>
+                <img src="./img/icones/eletrica.svg" alt="">
+                <h3 class="font-ppns-3">Motor Elétrico</h3>
+                <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+              </li>
+              <li>
+                <img src="./img/icones/velocidade.svg" alt="">
+                <h3 class="font-ppns-3">40 km/h</h3>
+                <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+              </li>
+              <li>
+                <img src="./img/icones/rastreador.svg" alt="">
+                <h3 class="font-ppns-3">Rastreador</h3>
+                <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+              </li>
+              <li>
+                <img src="./img/icones/carbono.svg" alt="">
+                <h3 class="font-ppns-3"> Fibra de Carbono </h3>
+                <p>Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="ficha-tecnica">
+            <h2 class="font-ppns-9">FICHA TÉCNICA</h2>
+            <ul class="bicicleta-fichatec 
+            rbot-txt-6">
+              <li><span>Peso</span><span>9 kg</span></li>
+              <li><span>Altura</span><span>60 cm</span></li>
+              <li><span>Largura</span><span>120 cm</span></li>
+              <li><span>Profundidade</span><span>10 cm</span></li>
+              <li><span>Marchas</span><span>16</span></li>
+              <li><span>Roda</span><span>29</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <article class="escolha-bikes">
+    <h2 class="font-ppns-1 background-site">escolha a sua<span class="ponto">.</span></h2>
+    <ul class="bikes background-site">
+
+      <li>
+        <a class="container-bikes" href="./nebula.html">
+          <img src="./img/bicicletas/nebula.jpg" alt="foto bicicleta nebula">
+          <div class="bikes-info">
+            <h3 class="font-ppns-2">Nebula Cosmic</h3>
+            <p class="rbot-txt-4">R$ 3999</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a class="container-bikes" href="./nimbus.html">
+          <img src="./img/bicicletas/nimbus.jpg" alt="foto bicicleta nimbus">
+          <div class="bikes-info">
+            <h3 class="font-ppns-2">Nimbus Stark</h3>
+            <p class="rbot-txt-4">R$ 4999</p>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </article>
+
+  <article class="pedale-seguro">
+    <div class="pedale-seguro-container background-site">
+      <div class="imagem-pedale">
+        <img src="./img/fotos/seguros.jpg" alt="">
+      </div>
+      <div class="pedale-textos c1">
+        <h2 class="font-ppns-1">Pedale mais tranquilo como nosso <span class="ponto">seguro.</span></h2>
+
+        <p class="rbot-txt-3 c9">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+        <a class="botao" href="">conheça mais</a>
+      </div>
+    </div>
+  </article>
 
   <footer class="rodape">
     <div class="container-rodape background-site">
